tests/models/struct/named/unit/fail/lt.stderr
error: Support condition is alias, default
 --> tests/models/struct/named/unit/fail/lt.rs:5:5
  |
5 |     value: (),
  |     ^^^^^
